--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
       <h1><strong>TechWare Solutions </strong></h1>
       <br>
-      <a href="Inicial.html">página inicial</a>
+      <a href="index.html">página inicial</a>
       <a href="Serviços.html">Nossos Serviços</a>
       <a href="Contato.html">Contato</a>
       <br>
