--- a/Contato.html
+++ b/Contato.html
@@ -6,7 +6,7 @@ q!DOCTYPE html>
   </head>
   <body>
       <h1><strong>Contato</strong></h1>
-      <a href="Inicial.html">página inicial</a>
+      <a href="index.html">página inicial</a>
       <a href="Serviços.html">Nossos Serviços</a>
       <a href="Contato.html">Contato</a>
      <h1><strong>Entre em contato conosco</h1></strong>
