--- a/Contato.html
+++ b/Contato.html
@@ -11,7 +11,7 @@
       <a href="Contato.html">Contato</a>
      <h1><strong>Entre em contato conosco</h1></strong>
      <br>
-     <p>Telefole: (12) 3456- 7890
+     <p>Telefone: (12) 3456- 7890
      <br>
      <p>E-mail: contato@techwaresolutions.com</p>
   </body>
