--- a/Serviços.html
+++ b/Serviços.html
@@ -7,7 +7,7 @@
   <body>
       <h1><strong>Nossos Serviços </strong></h1>
       <br>
-      <a href=index.html">página inicial</a>
+      <a href="index.html">página inicial</a>
       <a href="Serviços.html">Nossos Serviços<a>
       <a href="Contato.html">Contato<a>
       <br>
