add pastas src com "contato" e "serviços"

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <body>
       <h1><strong>TechWare Solutions </strong></h1>
       <br>
-      <a href="index.html">página inicial</a>
-      <a href="Serviços.html">Nossos Serviços</a>
-      <a href="Contato.html">Contato</a>
+      <a href="./index.html">página inicial</a>
+      <a href="./src/pages/Serviços.html">Nossos Serviços</a>
+      <a href="./src/pages/Contato.html">Contato</a>
       <br>
       <h1><strong>Bem Vindo á TechWare Solutions</strong></h1>
       <br>
