--- a/src/pages/Contato.html
+++ b/src/pages/Contato.html
@@ -6,9 +6,9 @@
   </head>
   <body>
       <h1><strong>Contato</strong></h1>
-      <a href="index.html">página inicial</a>
-      <a href="Serviços.html">Nossos Serviços</a>
-      <a href="Contato.html">Contato</a>
+      <a href="../../index.html">página inicial</a>
+      <a href="./Serviços.html">Nossos Serviços<a>
+      <a href="./Contato.html">Contato<a>
      <h1><strong>Entre em contato conosco</h1></strong>
      <br>
      <p>Telefone: (12) 3456- 7890
