--- a/src/pages/Serviços.html
+++ b/src/pages/Serviços.html
@@ -7,9 +7,9 @@
   <body>
       <h1><strong>Nossos Serviços </strong></h1>
       <br>
-      <a href="index.html">página inicial</a>
-      <a href="Serviços.html">Nossos Serviços<a>
-      <a href="Contato.html">Contato<a>
+      <a href="../../index.html">página inicial</a>
+      <a href="./Serviços.html">Nossos Serviços<a>
+      <a href="./Contato.html">Contato<a>
       <br>
       <h1><strong>Desenvolvimento de Software</strong></h1>
       <br>
