--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
       <h1><strong>TechWare Solutions </strong></h1>
-      <a href="./index.html">página inicial</a>
+      <a href="./index.html">Página inicial</a>
       <a href="./src/pages/Serviços.html">Nossos Serviços</a>
       <a href="./src/pages/Contato.html">Contato</a>
       <h1><strong>Bem Vindo á TechWare Solutions</strong></h1>
