--- a/src/pages/Contato.html
+++ b/src/pages/Contato.html
@@ -6,7 +6,7 @@
   </head>
   <body>
       <h1><strong>Contato</strong></h1>
-      <a href="../../index.html">página inicial</a>
+      <a href="../../index.html">Página inicial</a>
       <a href="./Serviços.html">Nossos Serviços<a>
       <a href="./Contato.html">Contato<a>
      <h1><strong>Entre em contato conosco</h1></strong>
